--- a/src/components/ExpandableCard/ExpandableCard.scss
+++ b/src/components/ExpandableCard/ExpandableCard.scss
@@ -2,7 +2,7 @@
     &__container {
         width: 345px;
         margin-left: 20px;
-        background-color: #644BAB !important;
+        background-color: #644BAB;
         border-radius: 10px;
         color: white !important;
         cursor: default;
