--- a/src/components/ExpandableCard/ExpandableCard.scss
+++ b/src/components/ExpandableCard/ExpandableCard.scss
@@ -3,7 +3,7 @@
         width: 345px;
         margin-left: 20px;
         background-color: #644BAB;
-        border-radius: 10px;
+        border-radius: 15px !important;
         color: white !important;
         cursor: default;
     }
