Fix search bar theme switch 🌚

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -10,6 +10,17 @@ $search-width: 500px;
         background-color: #282828;
         border-radius: 12px;
     }
+    &__container-dark {
+      display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: $search-width;
+        margin: 20px;
+        background-color: white;
+        border-radius: 12px;
+        border: 2px solid black;
+        color: black !important;
+    }
 
     &__element {
         width: $search-width;
@@ -21,6 +32,17 @@ $search-width: 500px;
         font-size: 15px;
         letter-spacing: 1px;
     }
+
+    &__element-dark {
+      width: $search-width;
+      border: none;
+      padding: 10px 15px 10px 15px;
+      outline: none;
+      background-color: transparent;
+      color: black;
+      font-size: 15px;
+      letter-spacing: 1px;
+  }
 
     &__element::-webkit-input-placeholder,
     textarea::-webkit-input-placeholder {
