--- a/src/App.scss
+++ b/src/App.scss
@@ -4,12 +4,16 @@ body {
 }
 
 .main-area {
-    margin: 20px;
+    width: 100%;
+    height: 100%;
 }
 
 .App {
     position: absolute;
     z-index: 1;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .astro-planet {
