--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -1,7 +1,7 @@
 .landing {
     &__container {
         width: 100%;
-        height: 100%;
+        height: 102vh;
         background-image: url('https://i.imgur.com/O3VYjVq.png');
         background-size: cover;
     }
