--- a/src/components/LandingPageFooter/LandingPageFooter.scss
+++ b/src/components/LandingPageFooter/LandingPageFooter.scss
@@ -1,20 +1,20 @@
 .landing-page-footer {
-    &__container {
-        display: flex;
-        justify-content: center;
-    }
+  &__container {
+    display: flex;
+    justify-content: center;
+  }
 
-    &__option {
-        color: #AF9DE0;
-        margin: 0 10px 0 10px;
-        cursor: pointer;
-    }
+  &__option {
+    color: #af9de0;
+    margin: 0 10px 0 10px;
+    cursor: pointer;
+  }
 
-    &__option:hover {
-        cursor: pointer;
-        color: white;
-    }
-    &__separator {
-        color: #AF9DE0;
-    }
+  &__option:hover {
+    cursor: pointer;
+    color: white;
+  }
+  &__separator {
+    color: #af9de0;
+  }
 }
