--- a/src/shared/_styling-variables.scss
+++ b/src/shared/_styling-variables.scss
@@ -3,4 +3,4 @@ $background-color-light: #e4d7ff;
 $text-color-dark: white;
 $text-color-light: black;
 $card-background-light: blanchedalmond;
-$card-background-dark: #2C2C2C;
+$card-background-dark: #2c2c2c;
