--- a/src/components/ExpandableCard/ExpandableCard.scss
+++ b/src/components/ExpandableCard/ExpandableCard.scss
@@ -1,60 +1,59 @@
 .expandable-card {
-    &__container {
-        width: 345px;
-        margin-left: 20px;
-        background-color: #644BAB;
-        border-radius: 15px !important;
-        color: white !important;
-        cursor: default;
+  &__container {
+    width: 345px;
+    margin-left: 20px;
+    background-color: #644bab;
+    border-radius: 8px !important;
+    color: white !important;
+    cursor: default;
+  }
+  &__chevron {
+    color: white !important;
+    border-radius: 2px;
+    transition: all 2 linear;
+  }
+  &__chevron.rotate {
+    transform: rotate(-90deg);
+  }
+  &__details {
+    margin-left: 10px;
+    &-title {
+      font-weight: bold;
+      font-size: 20px;
     }
-    &__chevron {
-        color: white !important;
-        border-radius: 2px;
-        transition: all 2 linear;
-    }
-    &__chevron.rotate {
-        transform:rotate(-90deg);
-    }
-    &__details {
-        margin-left: 10px;
-        &-title {
-            font-weight: bold;
-            font-size: 20px;
-        }
-    }
+  }
 }
 
 .expanded-content {
-    &__container {
-        cursor: default;
-        background-color: #D3CBE9;
-        color: #36226D;
-        font-weight: bold;
-        font-size: 17px;
-        padding: 25px 25px 10px 25px;
-        border-radius: 5px;
-    }
-    &__badge {
-        margin-left: 15px;
-        padding: 5px 15px 5px 15px;
-        background-color: #36226D;
-        color: white;
-        border: 1px solid #36226D;
-        border-radius: 50px;
-        font-size: 14px;
-    }
-    &__first-row {
-        margin-bottom: 5px;
-        display: inline-block;
-    }
-    &__category {
-        border: 1px solid #36226D;
-        padding: 2px 5px 2px 5px;
-        border-radius: 50px;
-        font-size: 10px;
-    }
-    &__profiles {
-        margin-top: 5px;
-    }
+  &__container {
+    cursor: default;
+    background-color: #d3cbe9;
+    color: #36226d;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 25px 25px 10px 25px;
+    border-radius: 5px;
+  }
+  &__badge {
+    margin-left: 15px;
+    padding: 5px 15px 5px 15px;
+    background-color: #36226d;
+    color: white;
+    border: 1px solid #36226d;
+    border-radius: 50px;
+    font-size: 14px;
+  }
+  &__first-row {
+    margin-bottom: 5px;
+    display: inline-block;
+  }
+  &__category {
+    border: 1px solid #36226d;
+    padding: 2px 5px 2px 5px;
+    border-radius: 50px;
+    font-size: 10px;
+  }
+  &__profiles {
+    margin-top: 5px;
+  }
 }
-
