--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: inter;
+  src: url("./assets/fonts/Inter-Regular.ttf");
+}
+
 /* RightPanelUpper Sytling */
 .right-panel__container {
   padding: 20px;
