--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: inter;
-  src: url("./assets/fonts/Inter-Regular.ttf");
+  src: url("/fonts/Inter-Regular.ttf");
 }
 
 /* RightPanelUpper Sytling */
