Disabled scrolling from all the pages

--- a/src/global.scss
+++ b/src/global.scss
@@ -3,6 +3,9 @@
   src: url("./assets/fonts/Inter-Regular.ttf");
 }
 
+html, body {
+  overflow: hidden;
+}
 /* RightPanelUpper Sytling */
 .right-panel__container {
   padding: 20px;
